# digital-garden

./: .dockerignore  .gitignore  .replit  CLAUDE.md  Dockerfile  GROWTH_STAGES_IMPLEMENTATION.md  IMPLEMENTATION_PROGRESS.md  README.md  answers.md  blog_update.md  claude_prd.md  fly.staging.toml  fly.toml  gpt5_prd.md  improvement_ideas.md  package-lock.json  package.json  plan.md  pyproject.toml  refined_improvement_ideas.md  setup.sh  spec.md  stories.md  tailwind.config.js  test_dark_mode_simple.py  todo.md
.claude/: PROJECT_CLAUDE.md
.cursor/rules/: git-commits.mdc  project-management-rules.mdc  tailwind.mdc  unit-test-rules.mdc
.github/workflows/: fly-staging.yml  fly.yml
app/: config.py  content_manager.py  explore_route.py  interfaces.py  logging_config.py  main.py  models.py  vocabulary_helper.py
app/core/: __init__.py  constants.py
app/middleware/: __init__.py  logging_middleware.py
app/pages/: another-page.md  sample-page.md  yet-another-page.md
app/routers/: __init__.py  api.py  bookmarks.py  content.py  explore.py  feeds.py  garden.py  pages.py  tags.py  til.py
app/services/: __init__.py  backlink_service.py  content_filter_service.py  (+6 more)
data/: watercolor_tube.db
docs/: htmx.md
knowledge/: MIGRATION_COMPLETE.md
prompts/: task-001-css-foundation.md  task-002-model-extensions.md  task-009-sliding-panels.md  task-010-url-state.md  task-016-seo-implementation.md
scripts/: analyze_content.py  enhance_metadata.py  generate_metadata.py  migrate_content.py  migrate_growth_stages.py  validate_frontmatter.py
tests/: test_backlink_service.py  test_content_filter_service.py  test_content_interfaces.py  test_content_manager_logging.py  test_content_service.py  test_css_compilation.py  test_explore_route.py  test_feature_flags.py  test_framework_removal.py  test_growth_stage_migration.py  test_growth_stage_renderer.py  test_growth_stages.py  test_homepage_topographical.py  test_logging_config.py  test_logging_middleware.py  test_main.py  test_mobile_panel_adaptation.py  test_mobile_responsive_design.py  test_models.py  test_panel_infrastructure_removal.py  test_path_navigation_service.py  test_route_handler_migration.py  test_route_rendering.py  test_service_container.py  test_sliding_panel_ui.py  test_syntax_highlighting.py  test_template_css_loading.py  test_url_state.py  test_url_state_management.py
(+158 files in other folders)
