[project]
name = "digital-garden"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.1.0",
    "click>=8.1.7",
    "fastapi>=0.115.0",
    "jinja2>=3.1.4",
    "markdown>=3.7",
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
    "uvicorn>=0.30.6",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
