[project]
name = "digital_garden"
version = "0.1.0"
description = "A digital garden for organizing and sharing knowledge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "bleach>=6.1.0",
    "cairosvg>=2.7.1",
    "click>=8.1.7",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "jinja2>=3.1.4",
    "markdown>=3.7",
    "openai>=1.50.0",
    "anthropic>=0.15.0",
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "uvicorn>=0.30.6",
    "networkx>=3.2.1",
    "rich>=13.7.0"
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
