[project]
name = "digital_garden"
version = "0.1.0"
description = "A digital garden for organizing and sharing knowledge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "bleach>=6.1.0",
    "cairosvg>=2.7.1",
    "click>=8.1.7",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "jinja2>=3.1.4",
    "markdown>=3.7",
    "anthropic>=0.15.0",
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "uvicorn>=0.30.6",
    "networkx>=3.2.1",
    "rich>=13.7.0",
    "textstat>=0.7.3",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.4",
    "scikit-learn>=1.6.1",
    "pytest-asyncio>=0.25.3",
    "logfire[fastapi,httpx]>=3.5.3",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "playwright>=1.54.0",
    "pytest-playwright>=0.7.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test functions as async/await",
]
